--- a/IPYNB/Generate dataset.ipynb
+++ b/IPYNB/Generate dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,8 @@
     "from shapely.geometry import (Polygon, shape)\n",
     "from rasterio.mask import mask\n",
     "from pyproj import Proj, transform\n",
-    "import geopandas as gpd"
+    "import geopandas as gpd\n",
+    "import os"
    ]
   },
   {
@@ -19,73 +20,60 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "materials = [\"concrete_cement\",\"healthy_metal\",\"incomplete\",\"irregular_metal\",\"other\"]\n",
+    "for name in materials:\n",
+    "    os.makedirs('Processed data/train/'+name)\n",
+    "    \n",
+    "os.makedirs('Processed data/test')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for country in [\"colombia\", \"guatemala\", \"st_lucia\"]:\n",
+    "    regions = {\"st_lucia\":[\"dennery\"], \"colombia\":[\"borde_rural\",\"borde_soacha\"], \"guatemala\":[\"mixco_1_and_ebenezer\",\"mixco_3\"]}\n",
+    "    for region in regions[country]:\n",
+    "        src = rasterio.open('/home/cupgreek/Documents/stac/'+country+'/'+region+'/'+region+'_ortho-cog.tif')\n",
+    "        print(region+':'+str(src.crs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Function to extract the rooftop image from the source image and save it in '.tif' format\n",
-    "src = rasterio.open('/home/amit/guatemala/mixco_1_and_ebenezer/mixco_1_and_ebenezer_ortho-cog.tif')\n",
-    "aoi_geojson = gpd.read_file('/home/amit/guatemala/mixco_1_and_ebenezer/train-mixco_1_and_ebenezer.geojson')\n",
-    "for i in range(aoi_geojson.shape[0]):\n",
-    "    cord = aoi_geojson['geometry'][i].bounds\n",
-    "    inProj = Proj(init='epsg:4326')\n",
-    "    outProj = Proj(init='epsg:32616')\n",
-    "    (x1,y1,x2,y2) = cord\n",
-    "    x1_new,y1_new = transform(inProj,outProj,x1,y1)\n",
-    "    x2_new,y2_new = transform(inProj,outProj,x2,y2)\n",
-    "    ar_new = shapely.geometry.box(x1_new, y1_new, x2_new, y2_new, ccw=True)\n",
-    "    crop, cropTransform = mask(src, [ar_new], crop=True)\n",
-    "    meta = src.meta.copy()\n",
-    "    meta.update({\"transform\":cropTransform, \"height\":crop.shape[1], \"width\":crop.shape[2]})\n",
-    "\n",
-    "    with rasterio.open('Processed data/'+aoi_geojson['id'][i]+'.tif', 'w', **meta) as dst:\n",
-    "        dst.write(crop)"
+    "epsg = {'colombia':'32618', 'guatemala':'32616', 'st_lucia':'32620'}\n",
+    "for country in ['colombia','guatemala','st_lucia']:\n",
+    "    regions = {'st_lucia':['dennery'], 'colombia':['borde_rural','borde_soacha'], 'guatemala':['mixco_1_and_ebenezer','mixco_3']}\n",
+    "    for region in regions[country]:\n",
+    "        src = rasterio.open('/home/cupgreek/Documents/stac/'+country+'/'+region+'/'+region+'_ortho-cog.tif')\n",
+    "        for case in ['train', 'test']:\n",
+    "            aoi_geojson = gpd.read_file('/home/cupgreek/Documents/stac/'+country+'/'+region+'/'+case+'-'+region+'.geojson')\n",
+    "            for i in range(aoi_geojson.shape[0]):\n",
+    "                cord = aoi_geojson['geometry'][i].bounds\n",
+    "                inProj = Proj(init = 'epsg:4326')\n",
+    "                print(country,epsg[country],'epsg:'+epsg[country])\n",
+    "                outProj = Proj(init = 'epsg:'+epsg[country])\n",
+    "                (x1,y1,x2,y2) = cord\n",
+    "                x1_new,y1_new = transform(inProj,outProj,x1,y1)\n",
+    "                x2_new,y2_new = transform(inProj,outProj,x2,y2)\n",
+    "                ar_new = shapely.geometry.box(x1_new, y1_new, x2_new, y2_new, ccw=True)\n",
+    "                crop, cropTransform = mask(src, [ar_new], crop=True)\n",
+    "                meta = src.meta.copy()\n",
+    "                meta.update({'transform':cropTransform, 'height':crop.shape[1], 'width':crop.shape[2]})\n",
+    "                if case == 'train':\n",
+    "                    with rasterio.open('Processed data/'+case+'/'+aoi_geojson['roof_material'][i]+'/'+aoi_geojson['id'][i]+'.tif', 'w', **meta) as dst:\n",
+    "                        dst.write(crop)\n",
+    "                if case == 'test':\n",
+    "                    with rasterio.open('Processed data/'+case+'/'+aoi_geojson['id'][i]+'.tif', 'w', **meta) as dst:\n",
+    "                        dst.write(crop)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import cv2\n",
-    "\n",
-    "img = cv2.imread('Processed data/7a28207c.tif')\n",
-    "cv2.imshow('image', img)\n",
-    "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(270, 261, 3)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "img.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -104,7 +92,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
