--- a/IPYNB/Generate dataset.ipynb
+++ b/IPYNB/Generate dataset.ipynb
@@ -23,22 +23,9 @@
    "source": [
     "materials = [\"concrete_cement\",\"healthy_metal\",\"incomplete\",\"irregular_metal\",\"other\"]\n",
     "for name in materials:\n",
-    "    os.makedirs('Processed data/train/'+name)\n",
+    "    os.makedirs('Processed_data/train/'+name)\n",
     "    \n",
-    "os.makedirs('Processed data/test')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for country in [\"colombia\", \"guatemala\", \"st_lucia\"]:\n",
-    "    regions = {\"st_lucia\":[\"dennery\"], \"colombia\":[\"borde_rural\",\"borde_soacha\"], \"guatemala\":[\"mixco_1_and_ebenezer\",\"mixco_3\"]}\n",
-    "    for region in regions[country]:\n",
-    "        src = rasterio.open('/home/cupgreek/Documents/stac/'+country+'/'+region+'/'+region+'_ortho-cog.tif')\n",
-    "        print(region+':'+str(src.crs))"
+    "os.makedirs('Processed_data/test')"
    ]
   },
   {
@@ -68,10 +55,10 @@
     "                meta = src.meta.copy()\n",
     "                meta.update({'transform':cropTransform, 'height':crop.shape[1], 'width':crop.shape[2]})\n",
     "                if case == 'train':\n",
-    "                    with rasterio.open('Processed data/'+case+'/'+aoi_geojson['roof_material'][i]+'/'+aoi_geojson['id'][i]+'.tif', 'w', **meta) as dst:\n",
+    "                    with rasterio.open('Processed_data/'+case+'/'+aoi_geojson['roof_material'][i]+'/'+aoi_geojson['id'][i]+'.tif', 'w', **meta) as dst:\n",
     "                        dst.write(crop)\n",
     "                if case == 'test':\n",
-    "                    with rasterio.open('Processed data/'+case+'/'+aoi_geojson['id'][i]+'.tif', 'w', **meta) as dst:\n",
+    "                    with rasterio.open('Processed_data/'+case+'/'+aoi_geojson['id'][i]+'.tif', 'w', **meta) as dst:\n",
     "                        dst.write(crop)"
    ]
   }
