--- a/IPYNB/Training.ipynb
+++ b/IPYNB/Training.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "data = ImageDataBunch.from_folder('Processed_data',train='train', test = 'test',valid_pct = 0.2,  ds_tfms=get_transforms(flip_vert=True, max_lighting=0.1, max_zoom=1.05, max_warp=0.), size=128, bs=32).normalize(imagenet_stats)\n",
     "\n",
-    "learn = cnn_learner(data, models.resnet32, metrics=error_rate)"
+    "learn = cnn_learner(data, models.resnet101, metrics=error_rate)"
    ]
   },
   {
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learn.fit_one_cycle(6, callbacks=[SaveModelCallback(learn)])"
+    "learn.fit_one_cycle(7, callbacks=[SaveModelCallback(learn)])"
    ]
   },
   {
@@ -52,15 +52,15 @@
     "tests = os.listdir('Processed_data/test')\n",
     "\n",
     "for i in range(len(tests)):\n",
-    "\ttests[i] = tests.split('.')[0]\n",
+    "\ttests[i] = tests[i].split('.')[0]\n",
     "\n",
     "df_test = [['id','concrete_cement','healthy_metal','incomplete','irregular_metal','other']]\n",
     "for i in tests:\n",
     "  img = open_image('Processed_data/test/'+i+'.tif')\n",
     "  ar = np.array(learn.predict(img)[2])\n",
     "  temp = [i]\n",
-    "  ar = temp.append(ar)\n",
-    "  temp.append(ar)\n",
+    "  temp.extend(ar)\n",
+    "  df_test.append(temp)\n",
     "\n",
     "df_test = pd.DataFrame(df_test)\n",
     "df_test.to_csv('submission.csv')"
