--- a/IPYNB/OpenAI_Project.ipynb
+++ b/IPYNB/OpenAI_Project.ipynb
@@ -4,7 +4,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Installing Packages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install pyproj\n",
+    "!pip install rasterio\n",
+    "!pip install geopandas\n",
+    "!pip install pandas\n",
+    "!pip install shapely\n",
+    "!pip install os\n",
+    "!pip install fastai\n",
+    "!pip install torchvision\n",
+    "!pip install efficientnet_pytorch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Importing Libraries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## For Image PreProcessing"
    ]
   },
   {
@@ -23,6 +54,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## For PreTrained Models"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -38,10 +76,27 @@
     "from fastai.metrics import error_rate\n",
     "from fastai.vision.models import *\n",
     "from torchvision.models import *\n",
-    "from fastai.vision import *\n",
-    "import pretrainedmodels\n",
-    "from utils import *\n",
-    "import sys"
+    "from fastai.vision import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## For CNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.models import Sequential\n",
+    "from keras.layers import Convolution2D\n",
+    "from keras.layers import MaxPooling2D\n",
+    "from keras.layers import Flatten\n",
+    "from keras.layers import Dense"
    ]
   },
   {
@@ -57,25 +112,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "materials = [\"concrete_cement\",\"healthy_metal\",\"incomplete\",\"irregular_metal\",\"other\"]\n",
-    "for name in materials:\n",
-    "    os.makedirs('/home/cupgreek/Documents/Processed_data/train/'+name)\n",
-    "os.makedirs('/home/cupgreek/Documents/Processed_data/test/data')\n",
+    "source_path = 'stac'\n",
     "\n",
-    "#Function to extract the rooftop image from the source image and save it in '.tif' format\n",
-    "num = 0\n",
+    "dest_path = 'Processed_data'\n",
+    "\n",
+    "testImg_pos = 0\n",
+    "\n",
+    "countries = ['colombia','guatemala','st_lucia']\n",
+    "\n",
     "epsg = {'colombia':'32618', 'guatemala':'32616', 'st_lucia':'32620'}\n",
+    "\n",
     "regions = {'st_lucia':['dennery'], 'colombia':['borde_rural','borde_soacha'], \n",
     "           'guatemala':['mixco_1_and_ebenezer','mixco_3']}\n",
-    "ids = []\n",
     "\n",
-    "for country in ['colombia','guatemala','st_lucia']:\n",
+    "cases = ['train', 'test']\n",
+    "\n",
+    "ids = []"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating Directories to store extracted images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "materials = [\"concrete_cement\",\"healthy_metal\",\"incomplete\",\"irregular_metal\",\"other\"]\n",
+    "for name in materials:\n",
+    "    os.makedirs(dest_path+'/train/'+name)\n",
+    "os.makedirs(dest_path+'/test/data')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extacting rooftops from the GeoTIFF image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for country in countries:\n",
     "    inProj = Proj(init = 'epsg:4326')\n",
     "    outProj = Proj(init = 'epsg:'+epsg[country])\n",
     "    for region in regions[country]:\n",
-    "        src = rasterio.open('/home/cupgreek/Documents/stac/'+country+'/'+region+'/'+region+'_ortho-cog.tif')\n",
-    "        for case in ['train', 'test']:\n",
-    "            aoi_geojson = gpd.read_file('/home/cupgreek/Documents/stac/'+country+'/'+region+'/'+case+'-'+region+'.geojson')\n",
+    "        src = rasterio.open(source_path+'/'+country+'/'+region+'/'+region+'_ortho-cog.tif')\n",
+    "        for case in cases:\n",
+    "            aoi_geojson = gpd.read_file(data_path+'/'+country+'/'+region+'/'+case+'-'+region+'.geojson')\n",
     "            for i in range(aoi_geojson.shape[0]):\n",
     "                cord = aoi_geojson['geometry'][i].bounds\n",
     "                (x1,y1,x2,y2) = cord\n",
@@ -86,11 +179,11 @@
     "                meta = src.meta.copy()\n",
     "                meta.update({'transform':cropTransform, 'height':crop.shape[1], 'width':crop.shape[2]})\n",
     "                if case == 'train':\n",
-    "                    with rasterio.open('/home/cupgreek/Documents/Processed_data/'+case+'/'+aoi_geojson['roof_material'][i]+'/'+aoi_geojson['id'][i]+'.tif', 'w', **meta) as dst:\n",
+    "                    with rasterio.open(dest_path+'/'+case+'/'+aoi_geojson['roof_material'][i]+'/'+aoi_geojson['id'][i]+'.tif', 'w', **meta) as dst:\n",
     "                        dst.write(crop)\n",
     "                if case == 'test':\n",
-    "                    num = num+1\n",
-    "                    with rasterio.open('/home/cupgreek/Documents/Processed_data/'+case+'/data'+str(num)+'.tif', 'w', **meta) as dst:\n",
+    "                    testImg_pos = testImg_pos+1\n",
+    "                    with rasterio.open(dest_path+'/'+case+'/data/'+str(testImg_pos)+'.tif', 'w', **meta) as dst:\n",
     "                        dst.write(crop)\n",
     "                        ids.append(aoi_geojson['id'][i])        "
    ]
@@ -99,7 +192,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Loading the Image Data Bunch"
+    "# Classification Using PreTrained Models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading the Image Data Bunch"
    ]
   },
   {
@@ -109,7 +209,7 @@
    "outputs": [],
    "source": [
     "np.random.seed(2) # Everytime same validation bunch is taken\n",
-    "data = ImageDataBunch.from_folder('/content/drive/My Drive/Satellite data/data_processed/train',train='', test = '/content/drive/My Drive/Satellite data/data_processed/test',valid_pct = 0.2,  ds_tfms=get_transforms(flip_vert=True, max_lighting=0.1, max_zoom=1.05, max_warp=0.), \n",
+    "data = ImageDataBunch.from_folder(dest_path,train='train', test = 'test',valid_pct = 0.2,  ds_tfms=get_transforms(flip_vert=True, max_lighting=0.1, max_zoom=1.05, max_warp=0.), \n",
     "                              size=256, bs=32).normalize(imagenet_stats)"
    ]
   },
@@ -117,7 +217,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Classification Using PreTrained Models"
+    "## Funtion for Finding the optimum learning rate (For now doing it manually)"
    ]
   },
   {
@@ -130,7 +230,7 @@
    },
    "outputs": [],
    "source": [
-    "#Funtion for Finding the optimum learning rate (For now doing it manually)\n",
+    "\n",
     "'''def find_appropriate_lr(model:Learner, lr_diff:int = 15, loss_threshold:float = .05, adjust_value:float = 1, plot:bool = False) -> float:\n",
     "    #Run the Learning Rate Finder\n",
     "    model.lr_find()\n",
@@ -169,6 +269,13 @@
     "        plt.show()\n",
     "        \n",
     "    return lr_to_use '''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading the PreTrained Model and Training it's final layers"
    ]
   },
   {
@@ -250,6 +357,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Making all the layers of the model trainable"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -263,7 +377,6 @@
    },
    "outputs": [],
    "source": [
-    "#Making all the layers trainable\n",
     "learn.unfreeze()"
    ]
   },
@@ -328,7 +441,82 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Classification using a CNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialising the CNN\n",
+    "classifier = Sequential()\n",
+    "\n",
+    "# Convolution Layer\n",
+    "classifier.add(Convolution2D(32, (3, 3), input_shape = (64, 64, 3), activation = 'relu'))\n",
+    "# Pooling Layer\n",
+    "classifier.add(MaxPooling2D(pool_size = (2, 2)))\n",
+    "\n",
+    "# Adding a second convolutional layer\n",
+    "classifier.add(Convolution2D(32, (3, 3), activation = 'relu'))\n",
+    "classifier.add(MaxPooling2D(pool_size = (2, 2)))\n",
+    "\n",
+    "# Flattening\n",
+    "classifier.add(Flatten())\n",
+    "\n",
+    "# Full connection\n",
+    "classifier.add(Dense(output_dim = 128, activation = 'relu'))\n",
+    "classifier.add(Dense(output_dim = 5, activation = 'sigmoid'))\n",
+    "\n",
+    "# Compiling the CNN\n",
+    "classifier.compile(optimizer = 'adam', loss = 'categorical_crossentropy', metrics = 'categorical_accuracy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fitting the CNN to the images\n",
+    "\n",
+    "from keras.preprocessing.image import ImageDataGenerator\n",
+    "\n",
+    "train_datagen = ImageDataGenerator(rescale = 1./255,\n",
+    "                                   zoom_range = 0.2,\n",
+    "                                   horizontal_flip = True,\n",
+    "                                   validation_split=0.2)\n",
+    "\n",
+    "training_set = train_datagen.flow_from_directory(dest_path+'/train',\n",
+    "                                                 target_size = (64, 64),\n",
+    "                                                 batch_size = 32,\n",
+    "                                                 classes = ['concrete_cement','healthy_metal','incomplete','irregular_metal','other'], subset = 'training')\n",
+    "\n",
+    "validation_set = train_datagen.flow_from_directory(dest_path+'/train',\n",
+    "                                                 target_size = (64, 64),\n",
+    "                                                 batch_size = 32,\n",
+    "                                                 classes = ['concrete_cement','healthy_metal','incomplete','irregular_metal','other'], subset = 'validation')\n",
+    "\n",
+    "classifier.fit_generator(training_set,\n",
+    "                         samples_per_epoch = 8000,\n",
+    "                         nb_epoch = 25,\n",
+    "                         validation_data = validation_set,\n",
+    "                         nb_val_samples = 2000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Predicting the results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## For Pretrained Model"
    ]
   },
   {
@@ -339,8 +527,30 @@
    "source": [
     "result = []\n",
     "for img_id in ids:\n",
-    "    img = open_image('Processed_data/test/'+img_id+'.tif')\n",
+    "    img = open_image(dest_path+'/'+'test/'+img_id+'.tif')\n",
     "    result.append(np.array(learn.predict(img)[2]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## For CNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_datagen = ImageDataGenerator(rescale = 1./255)\n",
+    "\n",
+    "test_set = test_datagen.flow_from_directory(dest_path+'/test',\n",
+    "                                            target_size = (64,64),\n",
+    "                                            batch_size = 32)\n",
+    "\n",
+    "result = classifier.predict(test_set)"
    ]
   },
   {
@@ -362,7 +572,7 @@
    "source": [
     "df = pd.DataFrame(result, columns = ['concrete_cement','healthy_metal','incomplete','irregular_metal','other'])\n",
     "df.insert(0,'id',ids)\n",
-    "df.to_csv('Submission Form.csv',index = False)"
+    "df.to_csv(dest_path+'/'+'Submission Form.csv',index = False)"
    ]
   }
  ],
