--- a/IPYNB/OpenAI_Project.ipynb
+++ b/IPYNB/OpenAI_Project.ipynb
@@ -21,7 +21,8 @@
     "!pip install os\n",
     "!pip install fastai\n",
     "!pip install torchvision\n",
-    "!pip install efficientnet_pytorch"
+    "!pip install efficientnet_pytorch\n"
+    "!pip install keras"
    ]
   },
   {
