--- a/OpenAI_Project.ipynb
+++ b/OpenAI_Project.ipynb
@@ -84,27 +84,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## For CNN"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from keras.preprocessing.image import ImageDataGenerator\n",
-    "from keras.layers import Convolution2D\n",
-    "from keras.layers import MaxPooling2D\n",
-    "from keras.models import Sequential\n",
-    "from keras.layers import Flatten\n",
-    "from keras.layers import Dense"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Image Pre-Processing\n"
    ]
   },
@@ -114,21 +93,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Path of the raw data folder with the GeoTiff, GeoJSON and JSON files.\n",
     "source_path = 'stac'\n",
     "\n",
+    "#Path to the extracted images.\n",
     "dest_path = 'Processed_data'\n",
     "\n",
+    "#To track the number of images that are processed and their order.\n",
     "testImg_pos = 0\n",
     "\n",
+    "#The countries whose images are being processed\n",
     "countries = ['colombia','guatemala','st_lucia']\n",
     "\n",
+    "#The countries as keys and their respective epsg ids as values\n",
     "epsg = {'colombia':'32618', 'guatemala':'32616', 'st_lucia':'32620'}\n",
     "\n",
+    "#The regions that are processesd with their respective countries as their keys\n",
     "regions = {'st_lucia':['dennery'], 'colombia':['borde_rural','borde_soacha'], \n",
     "           'guatemala':['mixco_1_and_ebenezer','mixco_3']}\n",
     "\n",
+    "#For ease of looping\n",
     "cases = ['train', 'test']\n",
     "\n",
+    "#To store the ids of the rooftops in the order that they where extracted\n",
     "ids = []"
    ]
   },
@@ -187,7 +174,7 @@
     "                    testImg_pos = testImg_pos+1\n",
     "                    with rasterio.open(dest_path+'/'+case+'/data/'+str(testImg_pos)+'.tif', 'w', **meta) as dst:\n",
     "                        dst.write(crop)\n",
-    "                        ids.append(aoi_geojson['id'][i])        "
+    "                        ids.append(aoi_geojson['id'][i])"
    ]
   },
   {
@@ -210,7 +197,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.random.seed(2) # Everytime same validation bunch is taken\n",
+    "np.random.seed(2) #Everytime the same validation bunch is taken\n",
+    "\n",
     "data = ImageDataBunch.from_folder(dest_path,train='train', test = 'test',valid_pct = 0.2,  ds_tfms=get_transforms(flip_vert=True, max_lighting=0.1, max_zoom=1.05, max_warp=0.), \n",
     "                              size=256, bs=32).normalize(imagenet_stats)"
    ]
@@ -219,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Funtion for Finding the optimum learning rate (For now doing it manually)"
+    "## Funtion for Finding the optimum learning rate (Future Work)"
    ]
   },
   {
@@ -232,8 +220,10 @@
    },
    "outputs": [],
    "source": [
+    "'''\n",
+    "Giving a much Larger Value than what is being expected.\n",
     "\n",
-    "'''def find_appropriate_lr(model:Learner, lr_diff:int = 15, loss_threshold:float = .05, adjust_value:float = 1, plot:bool = False) -> float:\n",
+    "def find_appropriate_lr(model:Learner, lr_diff:int = 15, loss_threshold:float = .05, adjust_value:float = 1, plot:bool = False) -> float:\n",
     "    #Run the Learning Rate Finder\n",
     "    model.lr_find()\n",
     "    \n",
@@ -295,6 +285,7 @@
    "outputs": [],
    "source": [
     "model = EfficientNet.from_pretrained('efficientnet-b7', num_classes=data.c)\n",
+    "\n",
     "model._fc = nn.Linear(in_features=2560, out_features=5, bias=True) #Attaching a Linear layer at the end to support 5 classes\n",
     "\n",
     "learn = Learner(data, model, metrics=[error_rate]).mixup().to_fp16()"
@@ -317,8 +308,7 @@
     "learn.lr_find()\n",
     "learn.recorder.plot(suggestion=True)\n",
     "\n",
-    "# One more step of manually choosing the learning rate\n",
-    "\n",
+    "#Step of manually choosing the learning rate\n",
     "lr = 1e-05"
    ]
   },
@@ -332,6 +322,7 @@
    },
    "outputs": [],
    "source": [
+    "#The Function needs to be improvised\n",
     "#lr = find_appropriate_lr(learn, plot=True)"
    ]
   },
@@ -379,7 +370,7 @@
    },
    "outputs": [],
    "source": [
-    "learn.unfreeze()"
+    "learn.unfreeze() # Making all the layers within the pretrained model trainable"
    ]
   },
   {
@@ -399,6 +390,8 @@
     "#training the unfreezed model\n",
     "learn.lr_find()\n",
     "learn.recorder.plot(suggestion=True)\n",
+    "\n",
+    "#Choosing the learning rate manually\n",
     "lr = 1e-05"
    ]
   },
@@ -416,7 +409,7 @@
    },
    "outputs": [],
    "source": [
-    "#lr = find_appropriate_lr(learn, plot=True)"
+    "#lr = find_appropriate_lr(learn, plot=True) (Function needs to be refined and optimised)"
    ]
   },
   {
@@ -443,72 +436,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Classification using a CNN"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initialising the CNN\n",
-    "classifier = Sequential()\n",
-    "\n",
-    "# Convolution Layer\n",
-    "classifier.add(Convolution2D(32, (3, 3), input_shape = (64, 64, 3), activation = 'relu'))\n",
-    "# Pooling Layer\n",
-    "classifier.add(MaxPooling2D(pool_size = (2, 2)))\n",
-    "\n",
-    "# Adding a second convolutional layer\n",
-    "classifier.add(Convolution2D(32, (3, 3), activation = 'relu'))\n",
-    "classifier.add(MaxPooling2D(pool_size = (2, 2)))\n",
-    "\n",
-    "# Flattening\n",
-    "classifier.add(Flatten())\n",
-    "\n",
-    "# Full connection\n",
-    "classifier.add(Dense(output_dim = 128, activation = 'relu'))\n",
-    "classifier.add(Dense(output_dim = 5, activation = 'sigmoid'))\n",
-    "\n",
-    "# Compiling the CNN\n",
-    "classifier.compile(optimizer = 'adam', loss = 'categorical_crossentropy', metrics = 'categorical_accuracy')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Fitting the CNN to the images\n",
-    "\n",
-    "train_datagen = ImageDataGenerator(rescale = 1./255,\n",
-    "                                   zoom_range = 0.2,\n",
-    "                                   horizontal_flip = True,\n",
-    "                                   validation_split=0.2)\n",
-    "\n",
-    "training_set = train_datagen.flow_from_directory(dest_path+'/train',\n",
-    "                                                 target_size = (64, 64),\n",
-    "                                                 batch_size = 32,\n",
-    "                                                 classes = ['concrete_cement','healthy_metal','incomplete','irregular_metal','other'], subset = 'training')\n",
-    "\n",
-    "validation_set = train_datagen.flow_from_directory(dest_path+'/train',\n",
-    "                                                 target_size = (64, 64),\n",
-    "                                                 batch_size = 32,\n",
-    "                                                 classes = ['concrete_cement','healthy_metal','incomplete','irregular_metal','other'], subset = 'validation')\n",
-    "\n",
-    "classifier.fit_generator(training_set,\n",
-    "                         samples_per_epoch = 8000,\n",
-    "                         nb_epoch = 25,\n",
-    "                         validation_data = validation_set,\n",
-    "                         nb_val_samples = 2000)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Predicting the results"
    ]
   },
@@ -529,28 +456,6 @@
     "for img_id in ids:\n",
     "    img = open_image(dest_path+'/'+'test/'+img_id+'.tif')\n",
     "    result.append(np.array(learn.predict(img)[2]))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## For CNN"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_datagen = ImageDataGenerator(rescale = 1./255)\n",
-    "\n",
-    "test_set = test_datagen.flow_from_directory(dest_path+'/test',\n",
-    "                                            target_size = (64,64),\n",
-    "                                            batch_size = 32)\n",
-    "\n",
-    "result = classifier.predict(test_set)"
    ]
   },
   {
