--- a/OpenAI_Project.ipynb
+++ b/OpenAI_Project.ipynb
@@ -440,10 +440,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Test time augmentation and prediction\n",
+    "preds, y = learn.TTA(ds_type = DatasetType.Test)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## For Pretrained Model"
+    "# Re-arranging to the expected format"
    ]
   },
   {
@@ -452,10 +462,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = []\n",
-    "for img_id in ids:\n",
-    "    img = open_image(dest_path+'/'+'test/'+img_id+'.tif')\n",
-    "    result.append(np.array(learn.predict(img)[2]))"
+    "temp = ids\n",
+    "temp.sort()\n",
+    "results = np.concatenate((temp,preds), axis = 1)\n",
+    "\n",
+    "df = pd.DataFrame(results, columns = ['id', 'concrete_cement','healthy_metal','incomplete','irregular_metal','other'])\n",
+    "df = df.set_index(0)\n",
+    "df = df.reindex(ids)"
    ]
   },
   {
@@ -468,16 +481,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "NnU_fNF3GS0T"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.DataFrame(result, columns = ['concrete_cement','healthy_metal','incomplete','irregular_metal','other'])\n",
-    "df.insert(0,'id',ids)\n",
-    "df.to_csv(dest_path+'/'+'Submission Form.csv',index = False)"
+    "df.to_csv(dest_path+'/'+'Submission Form.csv')"
    ]
   }
  ],
