--- a/OpenAI_Project.ipynb
+++ b/OpenAI_Project.ipynb
@@ -142,7 +142,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Extacting rooftops from the GeoTIFF image"
+    "## Extracting rooftops from the GeoTIFF image"
    ]
   },
   {
